Issue #12149: Update the method cache after a type's dictionnary gets cleared by the garbage collector.  This fixes a segfault when an instance and its type get caught in a reference cycle, and the instance's deallocator calls one of the methods on the type (e.g. when subclassing IOBase).

Diagnosis and patch by Davide Rizzo.